--- a/test/fixtures/post_comments.yml
+++ b/test/fixtures/post_comments.yml
@@ -1,7 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  content: MyString
+  user: one
+  post: one
 
 two:
-  name: MyString
+  content: MyString
+  user: two
+  post: two
